# RustyBot

./: .dockerignore  .qovery.yml  Cargo.toml  Dockerfile  LICENSE  README.md  default.nix
.github/workflows/: docker.yml
src/: main.rs
