[package]
name = "rusty_bot"
version = "0.1.0"
authors = ["Nils ANDRÉ-CHANG <nils@nilsand.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4", default-features = false }
rocket_contrib = { version = "0.4", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
lazy_static = "1"
reqwest = { version = "0.10", default-features = false, features = [ "blocking", "json", "rustls-tls" ] }
